--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<head>
+    <style>
+        #xanastare {
+            background: url(img/xanastare.png);
+            background-repeat: repeat;
+            width: 80vw;
+            height: 80vh;
+        }
+    </style>
+</head>
 <h1>Spelunky99</h1>
+<div id="xanastare"></div>
