--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <style>
+        body {
+            background: black;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            flex-direction: column;
+            font-family: 'Roboto', sans-serif;
+        }
         #xanastare {
             background: url(img/xanastare.png);
             background-repeat: repeat;
             width: 80vw;
+            
+        }
+        #logo {
+            
+            background: url(img/s99logo1.png);
+            background-size: contain;
+            background-repeat: no-repeat;
+            width: 80vw;
             height: 80vh;
+        }
+        img {
+            margin-top: 40px;
+            width: 80vw;
+        }
+        #soon {
+            font-size: 75px;
         }
     </style>
 </head>
-<h1>Spelunky99</h1>
-<div id="xanastare"></div>
+<body>
+    <!-- <div id=logo></div> -->
+    <img src="img/s99logo1.png"/>
+    <div id=soon>COMING SOON</div>
+</body>
