--- a/scoreboard.html
+++ b/scoreboard.html
@@ -3,13 +3,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet" type="text/css" media="all">
     <link href="style/scoreboard.css" rel="stylesheet" type="text/css" media="all">
+    
 </head>
 <body>
     <!-- <div id=logo></div> -->
     <img src="img/s99logo2.png"/>
-    <div id=soon>COMING SOON</div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/W2R4pLzVQhM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <a id="playercount" href="scoreboard.html"></a>
+    <div id="playercount"></div>
     <div id="currentplayers"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
     <script src="script/scoreboard.js"></script>
