total win scoreboard

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/W2R4pLzVQhM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <a id="playercount" href="scoreboard.html"></a>
     <div id="currentplayers"></div>
+    <div id="topplayers"></div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
     <script src="script/scoreboard.js"></script>
 </body>
